--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Assets\Scripts\PlayerFollowScript.cs" />
     <Compile Include="Assets\Scripts\Arjun Scripts\GameManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
+    <Compile Include="Assets\Scripts\Arjun Scripts\GunFlip.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
